debug-pods/ubuntu-worker-02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
    - name: debug
      image: louisroyer/network-debug
      command: ["/bin/bash"]
      args: ["-c", "while true; do sleep 30; done;"]
      stdin: true
      tty: true
  nodeSelector:
    kubernetes.io/hostname: worker-02
