debug-pods/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-debug
  labels:
    app: nginx-debug
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-debug
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
